# OpenArena

./: .gitignore  README.md  classic_openarena_native.cfg
gamesrc/: CMakeLists.txt
gamesrc/cgame/: cg_challenges.c  cg_compat_math.c  cg_compat_math.h  cg_consolecmds.c  cg_draw.c  cg_local.h  cg_main.c  cg_newdraw.c  cg_players.c  cg_public.h  cg_servercmds.c  cg_syscalls.c  cg_view.c  cg_weapons.c
gamesrc/game/: g_weapon.c
gamesrc/q3_ui/: ui_menu.c
gamesrc/qcommon/: q_math.c  q_shared.c  q_shared.h
gamesrc/tests/: test_cgame_compat_math.c
gamesrc/ui/: ui_main.c  ui_public.h
release/openarena/: openarena.pk3
scripts/: compile_game.sh
text/: id-readme.txt
